X0-Bison-Snapshot.output
Nonterminals useless in grammar

   function_decl_list


Terminals unused in grammar

   CALLSYM
   EXITSYM
   REPEATSYM
   UNTILSYM
   KIBONOHANASYM
   RETURNSYM


Rules useless in grammar

  119 function_decl_list: function_decl_list function_decl
  120                   | function_decl


Rules useless in parser due to conflicts

   26 statement_list: %empty

   41 statement: %empty

   47 case_stat: %empty


State 13 conflicts: 30 shift/reduce, 31 reduce/reduce
State 29 conflicts: 30 shift/reduce, 31 reduce/reduce
State 42 conflicts: 6 shift/reduce
State 45 conflicts: 31 shift/reduce, 31 reduce/reduce
State 48 conflicts: 1 shift/reduce, 31 reduce/reduce
State 84 conflicts: 31 shift/reduce, 31 reduce/reduce
State 175 conflicts: 1 shift/reduce, 2 reduce/reduce
State 186 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: function_decl MAINSYM LBRACE statement_list RBRACE

    2 declaration_list: declaration_list declaration_stat
    3                 | declaration_stat
    4                 | %empty

    5 declaration_stat: typeenum identlist SEMICOLONSTAT
    6                 | typeenum identarraylist SEMICOLON
    7                 | CONSTSYM typeenum identlist SEMICOLON
    8                 | CONSTSYM typeenum identarraylist SEMICOLON

    9 identlist: identdef
   10          | identlist COMMA identdef

   11 identdef: IDENT
   12         | IDENT BECOMES factor

   13 typeenum: INTSYM
   14         | STRINGSYM
   15         | BOOLSYM
   16         | REALSYM
   17         | CHARSYM

   18 identarraylist: identarraydef
   19               | identarraylist COMMA identarraydef

   20 identarraydef: IDENT LBRACKET dimensionlist RBRACKET

   21 dimensionlist: dimension
   22              | dimensionlist COMMA dimension

   23 dimension: INTEGER

   24 statement_list: statement_list statement
   25               | statement
   26               | %empty

   27 statement: expression_statement
   28          | if_statement
   29          | while_statement
   30          | read_statement
   31          | write_statement
   32          | compound_statement
   33          | for_statement
   34          | do_statement
   35          | declaration_list
   36          | continue_stat
   37          | break_stat
   38          | switch_statement
   39          | case_list
   40          | yarimasu_stat
   41          | %empty

   42 switch_statement: SWITCHSYM LPARENSTAT expression RPARENSTAT LBRACE case_list default_statement RBRACE

   43 case_list: case_list case_stat
   44          | case_stat
   45          | %empty

   46 case_stat: CASESYM expression COLON compound_statement
   47          | %empty

   48 default_statement: DEFAULTSYM COLON compound_statement

   49 continue_stat: CONTINUESYM SEMICOLONSTAT

   50 break_stat: BREAKSYM SEMICOLONSTAT

   51 if_statement: IFSYM LPARENSTAT expression RPARENSTAT compound_statement else_list

   52 else_list: ELSESYMSTAT compound_statement
   53          | %empty

   54 ELSESYMSTAT: ELSESYM

   55 while_statement: WHILESYMSTAT LPARENSTAT expression RPARENSTAT compound_statement

   56 WHILESYMSTAT: WHILESYM

   57 write_statement: WRITESYM LPARENSTAT expression RPARENSTAT SEMICOLONSTAT

   58 read_statement: READSYM LPARENSTAT var RPARENSTAT SEMICOLONSTAT

   59 compound_statement: LBRACE statement_list RBRACE

   60 for_statement: FORSYM LPARENSTAT expression SEMICOLONSTAT expression SEMICOLONSTAT expression RPARENSTAT INC_OR_NOT compound_statement

   61 INC_OR_NOT: %empty

   62 do_statement: DOSYM compound_statement WHILESYM LPAREN expression RPARENSTAT SEMICOLONSTAT

   63 var: IDENT
   64    | IDENT LBRACKET expression_list RBRACKET

   65 expression_list: expression
   66                | expression_list COMMA expression

   67 expression_statement: expression SEMICOLONSTAT
   68                     | SEMICOLONSTAT

   69 expression: var BECOMES expression
   70           | simple_expr
   71           | %empty

   72 simple_expr: additive_expr
   73            | additive_expr OPR additive_expr
   74            | additive_expr SINGLEOPR
   75            | SINGLEOPR additive_expr

   76 SINGLEOPR: INCPLUS
   77          | INCMINUS
   78          | NOT

   79 OPR: EQL
   80    | NEQ
   81    | LSS
   82    | LEQ
   83    | GTR
   84    | GEQ
   85    | AND
   86    | OR
   87    | XOR
   88    | BITAND
   89    | BITOR
   90    | RR
   91    | RL

   92 additive_expr: term
   93              | additive_expr PLUSMINUS term

   94 PLUSMINUS: PLUS
   95          | MINUS

   96 term: factor
   97     | term TIMESDEVIDE factor

   98 TIMESDEVIDE: TIMES
   99            | DEVIDE
  100            | MOD

  101 factor: LPARENSTAT expression RPARENSTAT
  102       | var
  103       | INTEGER
  104       | REAL
  105       | STRING
  106       | BOOL
  107       | CHAR
  108       | YAJU

  109 SEMICOLONSTAT: SEMICOLON

  110 LPARENSTAT: LPAREN

  111 RPARENSTAT: RPAREN

  112 function_decl: typeenum IDENT LPAREN para_list RPAREN compound_statement
  113              | %empty

  114 para_list: para_list COMMA para_item
  115          | para_item

  116 para_item: typeenum IDENT
  117          | %empty

  118 yarimasu_stat: YARIMASUNESYM SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOLSYM (258) 15
BREAKSYM (259) 50
CALLSYM (260)
CASESYM (261) 46
CHARSYM (262) 17
COLON (263) 46 48
CONSTSYM (264) 7 8
CONTINUESYM (265) 49
DEFAULTSYM (266) 48
DOSYM (267) 62
ELSESYM (268) 54
EXITSYM (269)
FORSYM (270) 60
INTSYM (271) 13
IFSYM (272) 51
MAINSYM (273) 1
READSYM (274) 58
REALSYM (275) 16
REPEATSYM (276)
RR (277) 90
RL (278) 91
LPAREN (279) 62 110 112
RPAREN (280) 111 112
STRINGSYM (281) 14
SWITCHSYM (282) 42
UNTILSYM (283)
WHILESYM (284) 56 62
WRITESYM (285) 57
LBRACE (286) 1 42 59
RBRACE (287) 1 42 59
LBRACKET (288) 20 64
RBRACKET (289) 20 64
BITAND (290) 88
BITOR (291) 89
BECOMES (292) 12 69
COMMA (293) 10 19 22 66 114
LSS (294) 81
LEQ (295) 82
GTR (296) 83
GEQ (297) 84
EQL (298) 79
NEQ (299) 80
PLUS (300) 94
INCPLUS (301) 76
MINUS (302) 95
INCMINUS (303) 77
TIMES (304) 98
DEVIDE (305) 99
MOD (306) 100
SEMICOLON (307) 6 7 8 109 118
XOR (308) 87
AND (309) 85
OR (310) 86
NOT (311) 78
YAJU (312) 108
YARIMASUNESYM (313) 118
KIBONOHANASYM (314)
RETURNSYM (315)
IDENT (316) 11 12 20 63 64 112 116
INTEGER (317) 23 103
STRING (318) 105
CHAR (319) 107
BOOL (320) 106
REAL (321) 104


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
program (68)
    on left: 1, on right: 0
declaration_list (69)
    on left: 2 3 4, on right: 2 35
declaration_stat (70)
    on left: 5 6 7 8, on right: 2 3
identlist (71)
    on left: 9 10, on right: 5 7 10
identdef (72)
    on left: 11 12, on right: 9 10
typeenum (73)
    on left: 13 14 15 16 17, on right: 5 6 7 8 112 116
identarraylist (74)
    on left: 18 19, on right: 6 8 19
identarraydef (75)
    on left: 20, on right: 18 19
dimensionlist (76)
    on left: 21 22, on right: 20 22
dimension (77)
    on left: 23, on right: 21 22
statement_list (78)
    on left: 24 25 26, on right: 1 24 59
statement (79)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41, on right:
    24 25
switch_statement (80)
    on left: 42, on right: 38
case_list (81)
    on left: 43 44 45, on right: 39 42 43
case_stat (82)
    on left: 46 47, on right: 43 44
default_statement (83)
    on left: 48, on right: 42
continue_stat (84)
    on left: 49, on right: 36
break_stat (85)
    on left: 50, on right: 37
if_statement (86)
    on left: 51, on right: 28
else_list (87)
    on left: 52 53, on right: 51
ELSESYMSTAT (88)
    on left: 54, on right: 52
while_statement (89)
    on left: 55, on right: 29
WHILESYMSTAT (90)
    on left: 56, on right: 55
write_statement (91)
    on left: 57, on right: 31
read_statement (92)
    on left: 58, on right: 30
compound_statement (93)
    on left: 59, on right: 32 46 48 51 52 55 60 62 112
for_statement (94)
    on left: 60, on right: 33
INC_OR_NOT (95)
    on left: 61, on right: 60
do_statement (96)
    on left: 62, on right: 34
var (97)
    on left: 63 64, on right: 58 69 102
expression_list (98)
    on left: 65 66, on right: 64 66
expression_statement (99)
    on left: 67 68, on right: 27
expression (100)
    on left: 69 70 71, on right: 42 46 51 55 57 60 62 65 66 67 69 101
simple_expr (101)
    on left: 72 73 74 75, on right: 70
SINGLEOPR (102)
    on left: 76 77 78, on right: 74 75
OPR (103)
    on left: 79 80 81 82 83 84 85 86 87 88 89 90 91, on right: 73
additive_expr (104)
    on left: 92 93, on right: 72 73 74 75 93
PLUSMINUS (105)
    on left: 94 95, on right: 93
term (106)
    on left: 96 97, on right: 92 93 97
TIMESDEVIDE (107)
    on left: 98 99 100, on right: 97
factor (108)
    on left: 101 102 103 104 105 106 107 108, on right: 12 96 97
SEMICOLONSTAT (109)
    on left: 109, on right: 5 49 50 57 58 60 62 67 68
LPARENSTAT (110)
    on left: 110, on right: 42 51 55 57 58 60 101
RPARENSTAT (111)
    on left: 111, on right: 42 51 55 57 58 60 62 101
function_decl (112)
    on left: 112 113, on right: 1
para_list (113)
    on left: 114 115, on right: 112 114
para_item (114)
    on left: 116 117, on right: 114 115
yarimasu_stat (115)
    on left: 118, on right: 40


State 0

    0 $accept: . program $end

    BOOLSYM    shift, and go to state 1
    CHARSYM    shift, and go to state 2
    INTSYM     shift, and go to state 3
    REALSYM    shift, and go to state 4
    STRINGSYM  shift, and go to state 5

    $default  reduce using rule 113 (function_decl)

    program        go to state 6
    typeenum       go to state 7
    function_decl  go to state 8


State 1

   15 typeenum: BOOLSYM .

    $default  reduce using rule 15 (typeenum)


State 2

   17 typeenum: CHARSYM .

    $default  reduce using rule 17 (typeenum)


State 3

   13 typeenum: INTSYM .

    $default  reduce using rule 13 (typeenum)


State 4

   16 typeenum: REALSYM .

    $default  reduce using rule 16 (typeenum)


State 5

   14 typeenum: STRINGSYM .

    $default  reduce using rule 14 (typeenum)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 9


State 7

  112 function_decl: typeenum . IDENT LPAREN para_list RPAREN compound_statement

    IDENT  shift, and go to state 10


State 8

    1 program: function_decl . MAINSYM LBRACE statement_list RBRACE

    MAINSYM  shift, and go to state 11


State 9

    0 $accept: program $end .

    $default  accept


State 10

  112 function_decl: typeenum IDENT . LPAREN para_list RPAREN compound_statement

    LPAREN  shift, and go to state 12


State 11

    1 program: function_decl MAINSYM . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 13


State 12

  112 function_decl: typeenum IDENT LPAREN . para_list RPAREN compound_statement

    BOOLSYM    shift, and go to state 1
    CHARSYM    shift, and go to state 2
    INTSYM     shift, and go to state 3
    REALSYM    shift, and go to state 4
    STRINGSYM  shift, and go to state 5

    $default  reduce using rule 117 (para_item)

    typeenum   go to state 14
    para_list  go to state 15
    para_item  go to state 16


State 13

    1 program: function_decl MAINSYM LBRACE . statement_list RBRACE

    BOOLSYM        shift, and go to state 1
    BREAKSYM       shift, and go to state 17
    CASESYM        shift, and go to state 18
    CHARSYM        shift, and go to state 2
    CONSTSYM       shift, and go to state 19
    CONTINUESYM    shift, and go to state 20
    DOSYM          shift, and go to state 21
    FORSYM         shift, and go to state 22
    INTSYM         shift, and go to state 3
    IFSYM          shift, and go to state 23
    READSYM        shift, and go to state 24
    REALSYM        shift, and go to state 4
    LPAREN         shift, and go to state 25
    STRINGSYM      shift, and go to state 5
    SWITCHSYM      shift, and go to state 26
    WHILESYM       shift, and go to state 27
    WRITESYM       shift, and go to state 28
    LBRACE         shift, and go to state 29
    INCPLUS        shift, and go to state 30
    INCMINUS       shift, and go to state 31
    SEMICOLON      shift, and go to state 32
    NOT            shift, and go to state 33
    YAJU           shift, and go to state 34
    YARIMASUNESYM  shift, and go to state 35
    IDENT          shift, and go to state 36
    INTEGER        shift, and go to state 37
    STRING         shift, and go to state 38
    CHAR           shift, and go to state 39
    BOOL           shift, and go to state 40
    REAL           shift, and go to state 41

    BOOLSYM        [reduce using rule 4 (declaration_list)]
    BOOLSYM        [reduce using rule 26 (statement_list)]
    BOOLSYM        [reduce using rule 41 (statement)]
    BOOLSYM        [reduce using rule 45 (case_list)]
    BOOLSYM        [reduce using rule 47 (case_stat)]
    BREAKSYM       [reduce using rule 4 (declaration_list)]
    BREAKSYM       [reduce using rule 26 (statement_list)]
    BREAKSYM       [reduce using rule 41 (statement)]
    BREAKSYM       [reduce using rule 45 (case_list)]
    BREAKSYM       [reduce using rule 47 (case_stat)]
    CASESYM        [reduce using rule 4 (declaration_list)]
    CASESYM        [reduce using rule 26 (statement_list)]
    CASESYM        [reduce using rule 41 (statement)]
    CASESYM        [reduce using rule 45 (case_list)]
    CASESYM        [reduce using rule 47 (case_stat)]
    CHARSYM        [reduce using rule 4 (declaration_list)]
    CHARSYM        [reduce using rule 26 (statement_list)]
    CHARSYM        [reduce using rule 41 (statement)]
    CHARSYM        [reduce using rule 45 (case_list)]
    CHARSYM        [reduce using rule 47 (case_stat)]
    CONSTSYM       [reduce using rule 4 (declaration_list)]
    CONSTSYM       [reduce using rule 26 (statement_list)]
    CONSTSYM       [reduce using rule 41 (statement)]
    CONSTSYM       [reduce using rule 45 (case_list)]
    CONSTSYM       [reduce using rule 47 (case_stat)]
    CONTINUESYM    [reduce using rule 4 (declaration_list)]
    CONTINUESYM    [reduce using rule 26 (statement_list)]
    CONTINUESYM    [reduce using rule 41 (statement)]
    CONTINUESYM    [reduce using rule 45 (case_list)]
    CONTINUESYM    [reduce using rule 47 (case_stat)]
    DOSYM          [reduce using rule 4 (declaration_list)]
    DOSYM          [reduce using rule 26 (statement_list)]
    DOSYM          [reduce using rule 41 (statement)]
    DOSYM          [reduce using rule 45 (case_list)]
    DOSYM          [reduce using rule 47 (case_stat)]
    FORSYM         [reduce using rule 4 (declaration_list)]
    FORSYM         [reduce using rule 26 (statement_list)]
    FORSYM         [reduce using rule 41 (statement)]
    FORSYM         [reduce using rule 45 (case_list)]
    FORSYM         [reduce using rule 47 (case_stat)]
    INTSYM         [reduce using rule 4 (declaration_list)]
    INTSYM         [reduce using rule 26 (statement_list)]
    INTSYM         [reduce using rule 41 (statement)]
    INTSYM         [reduce using rule 45 (case_list)]
    INTSYM         [reduce using rule 47 (case_stat)]
    IFSYM          [reduce using rule 4 (declaration_list)]
    IFSYM          [reduce using rule 26 (statement_list)]
    IFSYM          [reduce using rule 41 (statement)]
    IFSYM          [reduce using rule 45 (case_list)]
    IFSYM          [reduce using rule 47 (case_stat)]
    READSYM        [reduce using rule 4 (declaration_list)]
    READSYM        [reduce using rule 26 (statement_list)]
    READSYM        [reduce using rule 41 (statement)]
    READSYM        [reduce using rule 45 (case_list)]
    READSYM        [reduce using rule 47 (case_stat)]
    REALSYM        [reduce using rule 4 (declaration_list)]
    REALSYM        [reduce using rule 26 (statement_list)]
    REALSYM        [reduce using rule 41 (statement)]
    REALSYM        [reduce using rule 45 (case_list)]
    REALSYM        [reduce using rule 47 (case_stat)]
    LPAREN         [reduce using rule 4 (declaration_list)]
    LPAREN         [reduce using rule 26 (statement_list)]
    LPAREN         [reduce using rule 41 (statement)]
    LPAREN         [reduce using rule 45 (case_list)]
    LPAREN         [reduce using rule 47 (case_stat)]
    STRINGSYM      [reduce using rule 4 (declaration_list)]
    STRINGSYM      [reduce using rule 26 (statement_list)]
    STRINGSYM      [reduce using rule 41 (statement)]
    STRINGSYM      [reduce using rule 45 (case_list)]
    STRINGSYM      [reduce using rule 47 (case_stat)]
    SWITCHSYM      [reduce using rule 4 (declaration_list)]
    SWITCHSYM      [reduce using rule 26 (statement_list)]
